# linear-skill

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/skills/release/: SKILL.md
.github/workflows/: release.yml
.pi/prompts/: build-dev.md
skill/: SKILL.md  install.sh
skill/references/memory/: current_user.md  index.md  list_projects.md  list_teams.md  team_active_issues.md
skill/scripts/: install.sh
src/: main.rs
