[package]
name = "linear-skill"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rpassword = "7"
serde_json = "1"
ureq = { version = "3", features = ["json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

